content alignment corrections

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18904,6 +18904,11 @@ body.coming-soon {
 
 }
 
+.check-area-wrapper p{
+  text-align: center;
+
+}
+
 .rts-dark h6{
   color: #fff;
 }
